# fast-api-docker

./: Dockerfile  README.md  pyproject.toml  requirements.txt
src/fast-api-dind/: main.py
